# c_cross_template

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  main.c
CMake/: README.md
CMake/Ld/: STM32F446RETx_FLASH.ld
CMake/Modules/: FindOpenOCD.cmake  FindSTLinkUtility.cmake  FindSTM32F4xx.cmake
CMake/Setup/: native.cmake  nucleo_stm32f446re.cmake
CMake/Toolchains/: arm-none-eabi-gcc.cmake
common/src/: fsm_trial.c
example/: example_blink.c
port/include/: port_led.h  port_system.h
port/native/include/: port_led.h  port_system.h
port/native/src/: port_led.c  port_system.c
port/nucleo_stm32f446re/include/: port_system.h
port/nucleo_stm32f446re/src/: port_blink.c  port_led.c  port_system.c
port/stm32f4/include/: port_led.h  port_system.h  stm32f4_system.h  stm32f4xx_hal_conf.h
port/stm32f4/src/: interr.c  port_led.c  port_system.c  stm32f4_led.c  syscalls.c
project/: main.c
project/common/include/: fsm.h
project/common/src/: fsm.c
project/port/native/include/: port_blink.h  port_led.h  port_system.h
project/port/native/src/: port_blink.c  port_system.c
project/port/nucleo_stm32f446re/include/: port_blink.h  port_led.h  port_system.h
project/port/nucleo_stm32f446re/src/: port_led.c  port_system.c
test/: CMakeLists.txt  test_arith.c  test_led.c
test/integration/: CMakeLists.txt  test_blink.c
test/unit/stm32f4/: test_stm32f4.c
